--- a/DiscordBotTemplate.csproj
+++ b/DiscordBotTemplate.csproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\Basic.cs" />
+    <Compile Include="Commands\ticketing.cs" />
     <Compile Include="Config\JSONReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -165,6 +166,8 @@
     <None Include="docs\repository_setup.md" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Other\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
